<resources>
    <string name="app_name">MyRem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_rate">Rate us 5-Star</string>
    <string name="navigation_vibration">Vibration ON/OFF</string>
    <string name="navigation_more">More Apps</string>
    <string name="navigation_share">Share App</string>
    <string name="navigation_policy">Privacy Policy</string>
    <string name="navigation_exit">Exit</string>
    <string name="change_language">Change Language</string>
    <string name="instructions">Instructions</string>
    <string name="rateus">Why not rate us a 5-Star?</string>
    <string name="sorry">The list is empty</string>
    <string name="it_okay">"It's okay"</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="first_point">Phones </string>
    <string name="second_point">Smart TVs </string>
    <string name="third_point">If the App </string>
    <string name="rate_us_title">Support Us</string>
    <string name="rate_us_message">If you enjoy</string>
    <string name="rate_us_cancel">No</string>
    <string name="rate_us_ok">YES!</string>
    <string name="download_this">Make sure to try this helpful App!</string>
    <string name="exit_desc">Are you sure you want to exit the application?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="help_us">Help us improve</string>
    <string name="feedback_detail">We\'d love to</string>
    <string name="contact_us">Contact Us</string>
    <string name="thanks_for_the_love">Thanks for the love!</string>
    <string name="rate_us_detail">We\'re happy</string>
    <string name="rate_us_">Rate Us!</string>
    <string name="do_you_love_this_app">Do you love this App?</string>
    <string name="nah">No</string>
    <string name="i_like_it">I like it!</string>
    <string name="rate_text">A five-star rating inspires us\nto serve you better :)</string>
    <string name="contact_text">Please let us know how we can improve</string>
    <string name="app_id">ca-app-pub-3424164443057663~2794304363</string>
    <string name="banner_ad_unit_id">ca-app-pub-3424164443057663/2994874093</string>
    <string name="interstitial_full_screen">ca-app-pub-3424164443057663/8985567374</string>
    <string name="native_ad">ca-app-pub-3424164443057663/4209751718</string>
    <string name="open_ad">ca-app-pub-3424164443057663/3388647336</string>
    <string name="moreApps">https://play.google.com/store/apps/developer?id=SoomApps</string>
    <string name="action_lag">Choose Your Language</string>
    <string name="ad_attribution">Ad</string>
    <string name="Back">Back</string>
    <string name="CH">CH</string>
    <string name="Click">Click</string>
    <string name="Input">Input</string>
    <string name="OK">OK</string>
    <string name="VOL">VOL</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_sdk_connection_failed">Enter pairing code displayed on TV</string>
    <string name="connect_sdk_pairing_pin_prompt_tv">Enter pairing code displayed on TV</string>
    <string name="connect_sdk_pairing_simple_prompt_tv">Confirm pairing on the TV</string>
    <string name="connect_sdk_pairing_simple_title_tv">Pairing request</string>
    <string name="connect_sdk_picker_select_device">Select a device</string>
    <string name="connect_toast">Make sure your TV and mobile device are connected to the same WiFi Network</string>
    <string name="connection_manager_action_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="search_tv_brand">  Search TV Brand</string>
    <string name="back_to_exit">Press Back again to exit</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="select_tv_brand_menu">Select TV Brand</string>
    <string name="my_devices">Favourites</string>
    <string name="no_app">unable to find app</string>
    <string name="my_fav_list">Favorite List</string>
    <string name="plz_add_to_fav">Please add a favorite remote from the TV Brands list</string>
    <string name="added_to_fav">Added to Favorite</string>
    <string name="rate_us">Why not rate us a 5-Star?</string>
    <string name="select_your_tv_brand">Select TV</string>
        <string name="ratingMessage">Thanks! We are waiting for your 5-Star!</string>
        <string name="ad_settings">AD Settings</string>
        <string name="we_care_about_your_privacy_and_data_security">We care about your privacy and data security.</string>
        <string name="ok_got_it">OK, GOT IT</string>
        <string name="we_use_technologies">We use technologies inside the app to personalize the content and ads for your better experience. We keep this app free by showing ads. Our partners will collect data and use a unique identifier on your device to show you more relevant ads.<a href="http://www.soomapps.com/universal-tv-remote-privacy-policy">Learn</a> how MyRem and our partners collect and use data.</string>
        <string name="by_continuing">By continuing using the app you consent to our use of your data. You can change your choice anytime for MyRem via the AD Settings section of the app. Also Check our <a href="http://www.soomapps.com/universal-tv-remote-privacy-policy">privacy policy</a></string>
        <string name="policyy"><u>privacy policy</u></string>
        <string name="Add_your_favourite">Add your favourite TV remotes to this page. Here is how:</string>
        <string name="add">Add</string>
</resources>