<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_last_screen"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="-5dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/info_bg_second"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="@dimen/_26sdp"
                                android:layout_height="@dimen/_26sdp"
                                android:gravity="top|center">

                                <ImageView
                                    android:id="@+id/tv1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/number_one" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_marginTop="-4dp"
                                android:gravity="top|center">

                                <View
                                    android:layout_width="5dp"
                                    android:layout_height="match_parent"
                                    android:background="@color/info_screen_vertical_line_color" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/first_point"
                                android:textColor="#ffffff"
                                android:textSize="@dimen/_15sdp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="@dimen/_26sdp"
                                android:layout_height="@dimen/_26sdp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:gravity="top|center">

                                <ImageView
                                    android:id="@+id/tv2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/number_two" />
                            </LinearLayout>

                            <!-- <LinearLayout
                                 android:layout_width="@dimen/_30sdp"
                                 android:layout_height="@dimen/_115sdp"
                                 android:layout_marginTop="-2dp"
                                 android:gravity="top|center">

                                 <View
                                     android:layout_width="5dp"
                                     android:layout_height="match_parent"
                                     android:background="@color/info_screen_vertical_line_color" />
                             </LinearLayout>-->
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:text="@string/second_point"
                                android:textColor="#ffffff"
                                android:textSize="@dimen/_15sdp" />
                        </LinearLayout>
                    </LinearLayout>

                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-4dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="@dimen/_26sdp"
                                android:layout_height="@dimen/_26sdp"
                                android:gravity="top|center">

                                <ImageView
                                    android:id="@+id/tv3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/number_three" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/third_point"
                                android:textColor="#ffffff"
                                android:textSize="@dimen/_15sdp" />
                        </LinearLayout>
                    </LinearLayout>
-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-20dp"
                            android:layout_weight=".12"
                            android:gravity="center">

                            <View
                                android:layout_width="2dp"
                                android:layout_height="fill_parent"
                                android:background="#181818" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".88" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fl_adplaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>